--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 	justify-content: center;
 	align-items: center;
 	align-content: center;
-  border: 10px dashed red; 
+  border: 10px dashed #0f4f0f; 
   background-color: white; 
   font-family: 'Arvo', serif;
 }
@@ -45,7 +45,7 @@
   justify-content: center;
   border: solid;
   border-width: 5px;
-  border-color: red;
+  border-color: #dd2d44;
   background-color: white;
 }
 
@@ -75,7 +75,7 @@
 	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
-  background: #102b10;  
+  background: #112649;  
 }
 
 .santa {
@@ -112,7 +112,6 @@ and (max-device-width: 568px) {
   }
   .modal {
     height: 98.5vh;
-    border: 5px dashed red; 
   }
   .App-header {
     padding-right: 1rem;
@@ -144,7 +143,6 @@ and (max-device-width: 667px) {
   }
   .modal {
     height: 98.5vh;
-    border: 5px dashed red; 
   }
   .App-header {
     padding-right: 1rem;
@@ -176,7 +174,6 @@ and (max-device-width: 736px) {
   }
   .modal {
     height: 98.5vh;
-    border: 5px dashed red; 
   }
   .App-header {
     padding-right: 1rem;
